# dpgstack

./: .gitignore  .readthedocs.yaml  README.md  cookiecutter.json  pyproject.toml  run_dev_doc_server.sh
{{cookiecutter.__project_slug}}/: .env  .gitignore  justfile  manage.py  pyproject.toml  pytest.ini  todo.md
{{cookiecutter.__project_slug}}/apps/_blueprint/: apps.py  factories.py  forms.py  forms_child.py  models.py  serializers.py  urls.py  views.py
{{cookiecutter.__project_slug}}/apps/_blueprint/migrations/: 0001_initial.py
{{cookiecutter.__project_slug}}/apps/_blueprint/templates/: _blueprint_cards.html  _blueprint_cards_child.html  _blueprint_table.html  _blueprint_table_child.html
{{cookiecutter.__project_slug}}/apps/_blueprint/tests/: test_cards.py  test_cards_child.py  test_table.py  test_table_child.py
{{cookiecutter.__project_slug}}/apps/_blueprint/views/: cards.py  cards_child.py  table.py  table_child.py
{{cookiecutter.__project_slug}}/apps/core/: sidebar_icons.py  utils.py
{{cookiecutter.__project_slug}}/apps/core/templatetags/: form_tags.py  table_tags.py
{{cookiecutter.__project_slug}}/apps/my_app/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
{{cookiecutter.__project_slug}}/config/: settings.py  urls.py
{{cookiecutter.__project_slug}}/deploy/deploy_on_localhost/: README.md  compose.yaml
{{cookiecutter.__project_slug}}/deploy/deploy_on_localhost/django/: .env  Dockerfile  entrypoint.sh
{{cookiecutter.__project_slug}}/deploy/deploy_on_localhost/grafana/: .env  dashboards.yaml  prometheus.yaml
{{cookiecutter.__project_slug}}/deploy/deploy_on_localhost/jenkins/: .env  Jenkinsfile  jenkins.yaml
{{cookiecutter.__project_slug}}/deploy/deploy_on_localhost/nginx/: Dockerfile  {{cookiecutter.__project_slug}}.conf
{{cookiecutter.__project_slug}}/deploy/deploy_on_localhost/prometheus/: prometheus.yml
{{cookiecutter.__project_slug}}/deploy/deploy_on_{{cookiecutter.__ssh_slug}}/: !Deployment Checklist.md  compose.yaml
{{cookiecutter.__project_slug}}/deploy/deploy_on_{{cookiecutter.__ssh_slug}}/ansible/: hosts.yml  playbook.yml
{{cookiecutter.__project_slug}}/deploy/deploy_on_{{cookiecutter.__ssh_slug}}/django/: .env  Dockerfile  entrypoint.sh
{{cookiecutter.__project_slug}}/deploy/deploy_on_{{cookiecutter.__ssh_slug}}/grafana/: .env  dashboards.yaml  prometheus.yaml
{{cookiecutter.__project_slug}}/deploy/deploy_on_{{cookiecutter.__ssh_slug}}/jenkins/: .env  Dockerfile  Jenkinsfile  jenkins.yaml  plugins.txt
{{cookiecutter.__project_slug}}/deploy/deploy_on_{{cookiecutter.__ssh_slug}}/nginx/: {{cookiecutter.__project_slug}}.conf
{{cookiecutter.__project_slug}}/shell_setup/: .zshrc  Microsoft.PowerShell_profile.ps1  dpgstack.code-profile
{{cookiecutter.__project_slug}}/static/css/: styles.css
{{cookiecutter.__project_slug}}/static/js/: darkmode.js  htmx.sse.js  notifications.js
{{cookiecutter.__project_slug}}/templates/: builder.html
{{cookiecutter.__project_slug}}/templates/my_app/: book.html
{{cookiecutter.__project_slug}}/templates/registration/: login.html
(+87 files in other folders)
