[project]
name = "dpgstack"
version = "0.1.0"
description = "Heavily opinionated stack to create web apps quickly"
keywords = ["django"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["cookiecutter"]

[dependency-groups]
docs = [
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.1.0",
]
