[project]
name = "{{ cookiecutter.__project_slug }}"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "about-time>=4.2.1",
    "alive-progress>=3.2.0",
    "asgiref>=3.8.1",
    "asttokens>=3.0.0",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "colorama>=0.4.6",
    "cookiecutter>=2.6.0",
    "cssbeautifier>=1.15.4",
    "decorator>=5.2.1",
    "django>=5.1.7",
    "django-appconf>=1.1.0",
    "django-compressor>=4.5.1",
    "django-cotton>=2.0.1",
    "django-debug-toolbar>=5.0.1",
    "django-extensions>=3.2.3",
    "django-filter>=25.1",
    "django-htmx>=1.23.0",
    "django-json-widget>=2.1.0",
    "django-livereload-server>=0.5.1",
    "django-minify-html>=1.12.0",
    "django-prometheus>=2.4.0",
    "django-tailwind>=4.0.1",
    "django-widget-tweaks>=1.5.0",
    "djangorestframework>=3.15.2",
    "djlint>=1.36.4",
    "editorconfig>=0.17.0",
    "et-xmlfile>=2.0.0",
    "execnet>=2.1.1",
    "executing>=2.2.0",
    "factory-boy>=3.3.3",
    "faker>=37.4.2",
    "grapheme>=0.6.0",
    "greenlet>=3.1.1",
    "gunicorn>=23.0.0",
    "huey>=2.5.3",
    "idna>=3.10",
    "inflection>=0.5.1",
    "iniconfig>=2.1.0",
    "ipython>=9.0.2",
    "jedi>=0.19.2",
    "jsbeautifier>=1.15.4",
    "json5>=0.10.0",
    "locust>=2.43.1",
    "loguru>=0.7.3",
    "matplotlib-inline>=0.1.7",
    "nplusone>=1.0.0",
    "packaging>=24.2",
    "parso>=0.8.4",
    "pathspec>=0.12.1",
    "playwright>=1.51.0",
    "pluggy>=1.5.0",
    "prompt-toolkit>=3.0.50",
    "psycopg>=3.2.6",
    "psycopg-binary>=3.2.6",
    "pure-eval>=0.2.3",
    "pycryptodome>=3.22.0",
    "pyee>=12.1.1",
    "pygments>=2.19.1",
    "pytest>=8.3.5",
    "pytest-base-url>=2.1.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.10.0",
    "pytest-env>=1.1.5",
    "pytest-factoryboy>=2.7.0",
    "pytest-playwright>=0.7.0",
    "pytest-redis>=3.1.3",
    "pytest-xdist>=3.6.1",
    "python-dotenv>=1.0.1",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "rcssmin>=1.1.2",
    "redis>=6.3.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "rjsmin>=1.2.2",
    "rust-just>=1.40.0",
    "six>=1.17.0",
    "sqlparse>=0.5.3",
    "stack-data>=0.6.3",
    "text-unidecode>=1.3",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "typing-extensions>=4.12.2",
    "tzdata>=2025.1",
    "urllib3>=2.3.0",
    "wcwidth>=0.2.13",
    "win32-setctime>=1.2.0",
]

[tool.uv]
override-dependencies = ["pywin32; sys_platform == 'never'"]
